--- a/index.html
+++ b/index.html
@@ -1,57 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>Inventory Management Dashboard</title>
-<link rel="stylesheet" href="style.css">
-<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <meta charset="UTF-8">
+  <title>Smart Inventory Management</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <link rel="stylesheet" href="css/style.css">
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
 
 <header>
-  <h2>📦 Inventory Management Dashboard</h2>
+  <h1>📦 Smart Inventory Management</h1>
+  <button id="themeToggle">🌙</button>
 </header>
 
-<section class="kpis">
-  <div class="kpi blue"><p>Total Products</p><h1 id="pCount">0</h1></div>
-  <div class="kpi green"><p>Total Stock</p><h1 id="tStock">0</h1></div>
-  <div class="kpi orange"><p>Low Stock</p><h1 id="low">0</h1></div>
-  <div class="kpi red"><p>Expired</p><h1 id="exp">0</h1></div>
+<section class="cards">
+  <div class="card">Total Products <span id="totalProducts">0</span></div>
+  <div class="card">Total Stock <span id="totalStock">0</span></div>
+  <div class="card warning">Low Stock <span id="lowStock">0</span></div>
+  <div class="card danger">Expired Items <span id="expired">0</span></div>
 </section>
 
-<section class="dashboard">
-  <div class="card large">
-    <h3>Inventory Table</h3>
-    <table>
-      <thead>
-        <tr>
-          <th>Category</th>
-          <th>Product</th>
-          <th>Stock</th>
-          <th>Expiry</th>
-          <th>Status</th>
-        </tr>
-      </thead>
-      <tbody id="table"></tbody>
-    </table>
-  </div>
+<section class="form-section">
+  <h2>Add / Edit Product</h2>
+  <form id="inventoryForm">
+    <input id="pid" placeholder="Product ID" required>
+    <input id="pname" placeholder="Product Name" required>
+    <input id="category" placeholder="Category" required>
+    <input id="qty" type="number" placeholder="Base Quantity" required>
+    <input id="incomingStock" type="number" placeholder="Incoming Stock">
+    <input id="outgoingStock" type="number" placeholder="Outgoing Stock">
+    <input id="expiryDate" type="date">
+    <button type="submit">Save Product</button>
+  </form>
+</section>
 
-  <div class="card">
-    <h3>Stock Distribution</h3>
-    <canvas id="pieChart"></canvas>
-  </div>
+<section class="table-section">
+  <input type="text" id="search" placeholder="Search by ID or Name">
 
-  <div class="card">
-    <h3>Product-wise Stock</h3>
+  <table>
+    <thead>
+      <tr>
+        <th>ID</th><th>Name</th><th>Category</th>
+        <th>Qty</th><th>Status</th><th>Expiry</th><th>Actions</th>
+      </tr>
+    </thead>
+    <tbody id="inventoryTable"></tbody>
+  </table>
+</section>
+
+<section class="table-section">
+  <h2>📜 Stock Movement History</h2>
+  <table>
+    <thead>
+      <tr>
+        <th>Product</th><th>Type</th><th>Quantity</th><th>Date</th>
+      </tr>
+    </thead>
+    <tbody id="historyTable"></tbody>
+  </table>
+</section>
+
+<section class="charts">
+  <div class="chart-box">
+    <h3>📊 Product-wise Stock</h3>
     <canvas id="barChart"></canvas>
   </div>
 
-  <div class="card">
-    <h3>Inventory Trend</h3>
-    <canvas id="lineChart"></canvas>
+  <div class="chart-box">
+    <h3>🥧 Category-wise Distribution</h3>
+    <canvas id="pieChart"></canvas>
   </div>
 </section>
 
-<script src="script.js"></script>
+<script src="js/app.js"></script>
 </body>
 </html>
